[package]
name = "rskachka"
version = "0.1.1"
authors = ["Evgeny Nizhibitsky <nizhib@github.com>"]
edition = "2021"
description = "Download images blazingly fast"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
csv = "1.3.0"
ctrlc = "3.4.2"
env_logger = "0.11.1"
image = { version = "0.24.8", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
] }
indicatif = { version = "0.17.7" }
log = "0.4.20"
md5 = "0.7.0"
num_cpus = "1.16.0"
thiserror = "1.0.56"
ureq = "2.9.4"
url = "2.3.1"
