[package]
name = "rskachka"
version = "0.7.0"
authors = ["Evgeny Nizhibitsky <nizhib@github.com>"]
edition = "2021"
description = "Download images blazingly fast"
license = "MIT"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
csv = "1.3.0"
ctrlc = "3.4.4"
env_logger = "0.11.3"
image = { version = "0.24.9", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
  "webp-encoder",
] }
indicatif = { version = "0.17.8" }
log = "0.4.21"
md5 = "0.7.0"
memmap2 = "0.9.4"
num_cpus = "1.16.0"
thiserror = "1.0.58"
ureq = "2.9.6"
url = "2.5.0"
webp = "0.3.0"

[[bin]]
name = "rskachka"
path = "src/rskachka/main.rs"

[[bin]]
name = "rsindex"
path = "src/rsindex/main.rs"

[[bin]]
name = "rslc"
path = "src/rslc/main.rs"
